// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PublishModal Snapshots should match snapshot in copied state 1`] = `
<div
  aria-labelledby="modal-title"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-center justify-center"
  role="dialog"
>
  <div
    aria-hidden="true"
    class="fixed inset-0 bg-black/50 backdrop-blur-sm"
  />
  <div
    class="relative z-10 mx-4 max-h-[90vh] w-full max-w-md overflow-y-auto rounded-lg bg-white shadow-xl"
    tabindex="-1"
  >
    <div
      class="flex items-center justify-between border-b border-gray-200 p-6"
    >
      <h2
        class="text-xl font-semibold text-gray-900"
        id="modal-title"
      >
        Publish Quiz
      </h2>
      <button
        aria-label="Close modal"
        class="rounded-lg p-1 text-gray-400 hover:text-gray-600 focus:ring-2 focus:ring-blue-500 focus:outline-none"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="p-6"
    >
      <div
        class="space-y-6"
      >
        <div
          class="text-center"
        >
          <div
            class="mb-3 inline-flex h-12 w-12 items-center justify-center rounded-full bg-green-100"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check h-6 w-6 text-green-600"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </div>
          <p
            class="text-gray-700"
          >
            Your quiz is ready to share! Use the link below to let others take your quiz.
          </p>
        </div>
        <div
          class="space-y-2"
        >
          <label
            class="block text-sm font-medium text-gray-700"
            for="quiz-url"
          >
            Quiz URL
          </label>
          <div
            class="flex gap-2"
          >
            <input
              class="flex-1 rounded-lg border border-gray-300 bg-gray-50 px-3 py-2 font-mono text-sm text-gray-900 focus:ring-2 focus:ring-blue-500 focus:outline-none"
              id="quiz-url"
              readonly=""
              type="text"
              value="https://accessible-quiz-builder.com/q/ABCflrx3"
            />
            <button
              aria-disabled="false"
              aria-label="URL copied"
              class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary-600 text-white hover:bg-primary-700 active:bg-primary-800 focus-visible:ring-primary-500 px-4 py-2 text-base rounded-md gap-2 "
              style="cursor: pointer;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
              Copied!
            </button>
          </div>
        </div>
        <div
          class="space-y-3"
        >
          <p
            class="text-sm font-medium text-gray-700"
          >
            Share on social media
          </p>
          <div
            class="grid grid-cols-2 gap-3"
          >
            <button
              aria-disabled="false"
              class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 focus-visible:ring-secondary-500 px-4 py-2 text-base rounded-md gap-2 justify-center"
              style="cursor: pointer;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-twitter h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z"
                />
              </svg>
              Twitter
            </button>
            <button
              aria-disabled="false"
              class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 focus-visible:ring-secondary-500 px-4 py-2 text-base rounded-md gap-2 justify-center"
              style="cursor: pointer;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-facebook h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"
                />
              </svg>
              Facebook
            </button>
            <button
              aria-disabled="false"
              class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 focus-visible:ring-secondary-500 px-4 py-2 text-base rounded-md gap-2 justify-center"
              style="cursor: pointer;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-linkedin h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
                />
                <rect
                  height="12"
                  width="4"
                  x="2"
                  y="9"
                />
                <circle
                  cx="4"
                  cy="4"
                  r="2"
                />
              </svg>
              LinkedIn
            </button>
            <button
              aria-disabled="false"
              class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 focus-visible:ring-secondary-500 px-4 py-2 text-base rounded-md gap-2 justify-center"
              style="cursor: pointer;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-mail h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"
                />
                <rect
                  height="16"
                  rx="2"
                  width="20"
                  x="2"
                  y="4"
                />
              </svg>
              Email
            </button>
          </div>
        </div>
        <div
          class="border-t border-gray-200 pt-4"
        >
          <button
            aria-disabled="false"
            class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary-600 text-white hover:bg-primary-700 active:bg-primary-800 focus-visible:ring-primary-500 px-4 py-2 text-base rounded-md gap-2 w-full justify-center"
            style="cursor: pointer;"
            type="button"
          >
            Done
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PublishModal Snapshots should match snapshot when closed 1`] = `null`;

exports[`PublishModal Snapshots should match snapshot when open 1`] = `
<div
  aria-labelledby="modal-title"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-center justify-center"
  role="dialog"
>
  <div
    aria-hidden="true"
    class="fixed inset-0 bg-black/50 backdrop-blur-sm"
  />
  <div
    class="relative z-10 mx-4 max-h-[90vh] w-full max-w-md overflow-y-auto rounded-lg bg-white shadow-xl"
    tabindex="-1"
  >
    <div
      class="flex items-center justify-between border-b border-gray-200 p-6"
    >
      <h2
        class="text-xl font-semibold text-gray-900"
        id="modal-title"
      >
        Publish Quiz
      </h2>
      <button
        aria-label="Close modal"
        class="rounded-lg p-1 text-gray-400 hover:text-gray-600 focus:ring-2 focus:ring-blue-500 focus:outline-none"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="p-6"
    >
      <div
        class="space-y-6"
      >
        <div
          class="text-center"
        >
          <div
            class="mb-3 inline-flex h-12 w-12 items-center justify-center rounded-full bg-green-100"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check h-6 w-6 text-green-600"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </div>
          <p
            class="text-gray-700"
          >
            Your quiz is ready to share! Use the link below to let others take your quiz.
          </p>
        </div>
        <div
          class="space-y-2"
        >
          <label
            class="block text-sm font-medium text-gray-700"
            for="quiz-url"
          >
            Quiz URL
          </label>
          <div
            class="flex gap-2"
          >
            <input
              class="flex-1 rounded-lg border border-gray-300 bg-gray-50 px-3 py-2 font-mono text-sm text-gray-900 focus:ring-2 focus:ring-blue-500 focus:outline-none"
              id="quiz-url"
              readonly=""
              type="text"
              value="https://accessible-quiz-builder.com/q/ABCflrx3"
            />
            <button
              aria-disabled="false"
              aria-label="Copy URL to clipboard"
              class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 focus-visible:ring-secondary-500 px-4 py-2 text-base rounded-md gap-2 "
              style="cursor: pointer;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-copy h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="14"
                  rx="2"
                  ry="2"
                  width="14"
                  x="8"
                  y="8"
                />
                <path
                  d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                />
              </svg>
              Copy
            </button>
          </div>
        </div>
        <div
          class="space-y-3"
        >
          <p
            class="text-sm font-medium text-gray-700"
          >
            Share on social media
          </p>
          <div
            class="grid grid-cols-2 gap-3"
          >
            <button
              aria-disabled="false"
              class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 focus-visible:ring-secondary-500 px-4 py-2 text-base rounded-md gap-2 justify-center"
              style="cursor: pointer;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-twitter h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z"
                />
              </svg>
              Twitter
            </button>
            <button
              aria-disabled="false"
              class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 focus-visible:ring-secondary-500 px-4 py-2 text-base rounded-md gap-2 justify-center"
              style="cursor: pointer;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-facebook h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"
                />
              </svg>
              Facebook
            </button>
            <button
              aria-disabled="false"
              class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 focus-visible:ring-secondary-500 px-4 py-2 text-base rounded-md gap-2 justify-center"
              style="cursor: pointer;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-linkedin h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
                />
                <rect
                  height="12"
                  width="4"
                  x="2"
                  y="9"
                />
                <circle
                  cx="4"
                  cy="4"
                  r="2"
                />
              </svg>
              LinkedIn
            </button>
            <button
              aria-disabled="false"
              class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 focus-visible:ring-secondary-500 px-4 py-2 text-base rounded-md gap-2 justify-center"
              style="cursor: pointer;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-mail h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"
                />
                <rect
                  height="16"
                  rx="2"
                  width="20"
                  x="2"
                  y="4"
                />
              </svg>
              Email
            </button>
          </div>
        </div>
        <div
          class="border-t border-gray-200 pt-4"
        >
          <button
            aria-disabled="false"
            class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary-600 text-white hover:bg-primary-700 active:bg-primary-800 focus-visible:ring-primary-500 px-4 py-2 text-base rounded-md gap-2 w-full justify-center"
            style="cursor: pointer;"
            type="button"
          >
            Done
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PublishModal Snapshots should match snapshot with empty quiz title 1`] = `
<div
  aria-labelledby="modal-title"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-center justify-center"
  role="dialog"
>
  <div
    aria-hidden="true"
    class="fixed inset-0 bg-black/50 backdrop-blur-sm"
  />
  <div
    class="relative z-10 mx-4 max-h-[90vh] w-full max-w-md overflow-y-auto rounded-lg bg-white shadow-xl"
    tabindex="-1"
  >
    <div
      class="flex items-center justify-between border-b border-gray-200 p-6"
    >
      <h2
        class="text-xl font-semibold text-gray-900"
        id="modal-title"
      >
        Publish Quiz
      </h2>
      <button
        aria-label="Close modal"
        class="rounded-lg p-1 text-gray-400 hover:text-gray-600 focus:ring-2 focus:ring-blue-500 focus:outline-none"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="p-6"
    >
      <div
        class="space-y-6"
      >
        <div
          class="text-center"
        >
          <div
            class="mb-3 inline-flex h-12 w-12 items-center justify-center rounded-full bg-green-100"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check h-6 w-6 text-green-600"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </div>
          <p
            class="text-gray-700"
          >
            Your quiz is ready to share! Use the link below to let others take your quiz.
          </p>
        </div>
        <div
          class="space-y-2"
        >
          <label
            class="block text-sm font-medium text-gray-700"
            for="quiz-url"
          >
            Quiz URL
          </label>
          <div
            class="flex gap-2"
          >
            <input
              class="flex-1 rounded-lg border border-gray-300 bg-gray-50 px-3 py-2 font-mono text-sm text-gray-900 focus:ring-2 focus:ring-blue-500 focus:outline-none"
              id="quiz-url"
              readonly=""
              type="text"
              value="https://accessible-quiz-builder.com/q/ABCflrx3"
            />
            <button
              aria-disabled="false"
              aria-label="Copy URL to clipboard"
              class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 focus-visible:ring-secondary-500 px-4 py-2 text-base rounded-md gap-2 "
              style="cursor: pointer;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-copy h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="14"
                  rx="2"
                  ry="2"
                  width="14"
                  x="8"
                  y="8"
                />
                <path
                  d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                />
              </svg>
              Copy
            </button>
          </div>
        </div>
        <div
          class="space-y-3"
        >
          <p
            class="text-sm font-medium text-gray-700"
          >
            Share on social media
          </p>
          <div
            class="grid grid-cols-2 gap-3"
          >
            <button
              aria-disabled="false"
              class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 focus-visible:ring-secondary-500 px-4 py-2 text-base rounded-md gap-2 justify-center"
              style="cursor: pointer;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-twitter h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z"
                />
              </svg>
              Twitter
            </button>
            <button
              aria-disabled="false"
              class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 focus-visible:ring-secondary-500 px-4 py-2 text-base rounded-md gap-2 justify-center"
              style="cursor: pointer;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-facebook h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"
                />
              </svg>
              Facebook
            </button>
            <button
              aria-disabled="false"
              class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 focus-visible:ring-secondary-500 px-4 py-2 text-base rounded-md gap-2 justify-center"
              style="cursor: pointer;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-linkedin h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
                />
                <rect
                  height="12"
                  width="4"
                  x="2"
                  y="9"
                />
                <circle
                  cx="4"
                  cy="4"
                  r="2"
                />
              </svg>
              LinkedIn
            </button>
            <button
              aria-disabled="false"
              class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 focus-visible:ring-secondary-500 px-4 py-2 text-base rounded-md gap-2 justify-center"
              style="cursor: pointer;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-mail h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"
                />
                <rect
                  height="16"
                  rx="2"
                  width="20"
                  x="2"
                  y="4"
                />
              </svg>
              Email
            </button>
          </div>
        </div>
        <div
          class="border-t border-gray-200 pt-4"
        >
          <button
            aria-disabled="false"
            class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary-600 text-white hover:bg-primary-700 active:bg-primary-800 focus-visible:ring-primary-500 px-4 py-2 text-base rounded-md gap-2 w-full justify-center"
            style="cursor: pointer;"
            type="button"
          >
            Done
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
